fixed login button color

--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
 
     .button {
         display: flex;
-        border: solid black;
+        border: solid rgb(35, 47, 55);
         border-radius: 5px;
         color: white;
         justify-content: center;
