[TASK] modifies navigation and implements hamburger menu

--- a/neuer-ausbildungsnachweis.html
+++ b/neuer-ausbildungsnachweis.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Berichtsheft-Tool - neuer Ausbildungsnachweis</title>
     <link type="text/css" rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Berichtsheft-Tool</h1>
         <nav>
-            <ul>
+            <div id="menu-icon">☰</div>
+            <ul id="nav-list">
                 <li>Start</li>
                 <li>Ausbildungsnachweise</li>
                 <li>neuer Ausbildungsnachweis</li>
                 <li>Logout</li>
             </ul>
         </nav>
+        <h1>Berichtsheft-Tool</h1>
+        <div id="profile-picture-container">
+            <img src="https://placehold.co/50/blue/white" id="profile-picture" alt="Profilbild" width="50" height="50">
+        </div>
     </header>
     <main>
         <h2>neuer Ausbildungsnachweis</h2>
