--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="css/styles.css">
     <title>Wochenbericht</title>
 </head>
 
@@ -54,18 +55,6 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-    }
-
-    input {
-        font-size: 16px;
-        margin: .3em;
-        border-radius: 5px;
-        border: solid lightgray;
-        height: 1.5em;
-    }
-
-    label {
-        margin: .3em;
     }
 
     .button {
