--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
             triggerColorResetOnChange(passwordInput);
             alert("Please enter a valid password.");
         } else {
-            window.location.href = "neuer-ausbildungsnachweis.html";
+            window.location.href = "Landingpage/landing.html";
         }
     }
 
