--- a/neuer-ausbildungsnachweis.html
+++ b/neuer-ausbildungsnachweis.html
@@ -8,7 +8,7 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <header>
+  <header>
         <nav>
             <div id="menu-icon">☰</div>
             <ul id="nav-list">
@@ -21,8 +21,8 @@
         <h1>Berichtsheft-Tool</h1>
         <div id="profile-picture-container">
             <img src="https://placehold.co/50/blue/white" id="profile-picture" alt="Profilbild" width="50" height="50">
-        </div>
-    </header>
+    </div>
+  </header>
     <main>
         <h2>neuer Ausbildungsnachweis</h2>
         <div class="form">
@@ -105,7 +105,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="#">Startseite</a>
+                        <a href="Landingpage/landing.html">Startseite</a>
                     </div>
                 </div>
             </form>
