--- a/login.html
+++ b/login.html
@@ -20,15 +20,15 @@
 
         <form class="login-form" onsubmit="handleLogin(event)">
 
-            <label for="login-email">E-Mail</label>
-            <input type="text" value="" id="login-email" name="login-email">
+                <label for="login-email">E-Mail</label>
+                <input type="text" value="" id="login-email" name="login-email">
 
-            <label for="login-pass">Password</label>
-            <input type="password" value="" id="login-pass" name="login-pass">
-            
+                <label for="login-pass">Password</label>
+                <input type="password" value="" id="login-pass" name="login-pass">
+                
 
-            <input type="submit" value="Anmelden">
-            <a class="link" href="#">Password vergessen?</a>
+                <input class="button" type="submit" value="Anmelden">
+                <a class="link" href="#">Password vergessen?</a>
 
         </form>
     </div>
@@ -91,6 +91,8 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
     }
 
     .button {
@@ -126,6 +128,10 @@
         left: 3vw;
         top: 3vh;
         font-size: 1.5em;
+    }
+
+    label {
+        margin: .3em;
     }
 
 </style>
