--- a/Landingpage/landing.html
+++ b/Landingpage/landing.html
@@ -13,7 +13,7 @@
     <div class="hamburger"><div></div></div>
     <h1>Wochenberichte</h1>
     <div class="profile-pic-container">
-        <img src="https://via.placeholder.com/40" alt="Profilbild" class="profile-pic">
+        <img src="picture/blank-profile-picture-973460_1280.png" alt="Profilbild" class="profile-pic">
     </div>
     <div class="menu">
         <div>
