[TASK] replaces dummy profile picture

--- a/neuer-ausbildungsnachweis.html
+++ b/neuer-ausbildungsnachweis.html
@@ -20,7 +20,7 @@
         </nav>
         <h1>Berichtsheft-Tool</h1>
         <div id="profile-picture-container">
-            <img src="https://placehold.co/50/blue/white" id="profile-picture" alt="Profilbild" width="50" height="50">
+            <img src="Landingpage/picture/blank-profile-picture.png" id="profile-picture" alt="Profilbild" width="40" height="40">
         </div>
     </header>
     <main>
