[TASK] adds linking of menu items

--- a/neuer-ausbildungsnachweis.html
+++ b/neuer-ausbildungsnachweis.html
@@ -12,10 +12,9 @@
         <nav>
             <div id="menu-icon">☰</div>
             <ul id="nav-list">
-                <li>Start</li>
-                <li>Ausbildungsnachweise</li>
-                <li>neuer Ausbildungsnachweis</li>
-                <li>Logout</li>
+                <li><a href="Landingpage/landing.html">Ausbildungsnachweise</a></li>
+                <li><a href="neuer-ausbildungsnachweis.html">neuer Ausbildungsnachweis</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
         </nav>
         <h1>Berichtsheft-Tool</h1>
